# Polyphonic

./: LINUX_PORT_SUMMARY.md  README.md  bun.lockb  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: .env.example  App.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/artserver/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/discord_rpc/: mod.rs
src-tauri/src/formatter/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/music/: mod.rs
src-tauri/src/responses/: mod.rs
src-tauri/src/subsonic/: mod.rs
src/components/collection/: AlbumList.tsx  ArtistList.tsx  CoverArt.tsx  NowPlaying.tsx  PlaylistList.tsx  QueueItem.tsx  QueueList.tsx  SongList.tsx  TagDialog.tsx  TagList.tsx  ViewSwitcher.tsx
src/components/settings/: Settings.tsx
src/components/setup/: ServerConfigModal.tsx  SetupAdditional.tsx  SetupCollection.tsx  SetupTheme.tsx  SetupWelcome.tsx
src/components/ui/: button.tsx  context-menu.tsx  scroll-area.tsx  spinner.tsx  switch.tsx
src/contexts/: QueueContext.tsx
src/hooks/query/: useAddedAlbums.ts  useAlbumTags.ts  useArtistAlbums.ts  useArtists.ts  useLibraries.ts  usePlaylistSongs.ts  usePlaylists.ts  useRecentAlbums.ts  useSettings.ts  useSongs.ts  (+2 more)
src/routes/: __root.tsx  collection.lazy.tsx  index.lazy.tsx  initialsync.lazy.tsx  settings.lazy.tsx  setup.lazy.tsx
src/types/: Config.tsx  Music.tsx
src/util/: db.ts  discord.ts  query.ts  subsonic.ts
