[package]
name = "polyphonic"
version = "0.3.5"
description = "A desktop music player, built with Tauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polyphonic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
keyring = "1.1.0"
anyhow = "1.0.57"
md-5 = "0.10.1"
hex = "0.4"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
futures = "0.3.21"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "derive"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
image = "0.25.5"
glob = "0.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
